# resume-matcher

./: README.md  app.py  poc.py  pyproject.toml
core/: config.py  engine.py  models.py
data/: cv.typ  job_offer.txt
tui/: screens.py  styles.tcss  tui.py
