[project]
name = "resume-matcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "sentence-transformers>=5.2.2",
]
