[project]
name = "resume-matcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "sentence-transformers>=5.2.2",
    "textual>=7.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.3",
]
